--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.render-pipelines.high-definition": "14.0.11",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.settings-manager": "2.0.1",
+    "com.unity.shadergraph": "14.0.11",
     "com.unity.test-framework": "1.1.33",
     "com.unity.testtools.codecoverage": "1.2.6",
     "com.unity.textmeshpro": "3.0.7",
@@ -23,7 +24,6 @@
     "com.unity.xr.interaction.toolkit": "2.6.3",
     "com.unity.xr.legacyinputhelpers": "2.1.11",
     "com.unity.xr.management": "4.5.0",
-    "com.unity.xr.meta-openxr": "1.0.2",
     "com.unity.xr.openxr": "1.13.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
