--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.animation.rigging": "1.2.1",
     "com.unity.cloud.gltfast": "6.9.0",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.editorcoroutines": "1.0.0",
